lidarr-ton/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app: lidarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: lscr.io/linuxserver/lidarr:nightly
        ports:
        - containerPort: 8686
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        - name: music
          mountPath: /music
        - name: slskd-downloads
          mountPath: /slskd-downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: lidarr-config
      - name: data
        persistentVolumeClaim:
          claimName: lidarr-data
      - name: music
        nfs:
          server: 192.168.88.245
          path: /ton-cluster/navidrome_navidrome-music-pvc
      - name: slskd-downloads
        nfs:
          server: 192.168.88.245
          path: /ton-cluster/slskd_slskd-downloads
