lidarr-ton/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app: lidarr
spec:
  type: ClusterIP
  ports:
  - port: 8686
    targetPort: 8686
    protocol: TCP
    name: http
  selector:
    app: lidarr
