lidarr-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: lidarr
  namespace: lidarr
spec:
  hosts:
    - lidarr.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: lidarr
            port:
              number: 8686
